# verus-paxos

./: .gitignore  Cargo.toml  README.md
docs/superpowers/plans/: 2026-04-25-cas-paxos-impl.md  2026-04-25-full-exec-annotation.md
docs/superpowers/specs/: 2026-04-25-cas-paxos-design.md  2026-04-25-full-exec-annotation-design.md
src/: acceptor.rs  cluster.rs  history.rs  lib.rs  linearizability.rs  main.rs  network.rs  primitives.rs  quorum.rs
